--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ daphne==2.5.0
 dj-database-url==0.5.0
 Django==3.0.7
 django-bootstrap4==2.1.1
+django-environ==0.4.5
 django-heroku==0.3.1
 gunicorn==20.0.4
 hiredis==1.0.1
